--- a/results.Rmd
+++ b/results.Rmd
@@ -8,41 +8,34 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
+
 ```{r naive trials, include = FALSE}
-#read in multichoice trial sums
-sums <- readRDS("Output/data/multichoicesums.rds")
 
-#read in daily feeding results
-day <- readRDS("Output/data/dailyresultscleaned.rds")
+#source the multichoice script
 
-#mean intake rates
-meanNI <- round(mean(sums$Intake), digits = 2)
-sdNI <- round(sd(sums$Intake), digits = 2)
-
-#mean intake rates of CP and NDF during naive trials
-meanNCP <- round(mean(sums$CP), digits = 2)
-sdNCP <- round(sd(sums$CP), digits = 2)
-meanNNDF <- round(mean(sums$NDF), digits = 2)
-sdNNDF <- round(sd(sums$NDF), digits = 2)
+source("Scripts/05-stats_multichoice.R")
 
 
 ```
 
+
 ## Naiive trials
 
-During the naive multi-choice feeding trial phases of the experiment, snowshoe hares ate an average of `r meanNI` ± `r sdNI` g DM/day across all diets. Hares ate on average of `r meanNCP` ± `r sdNCP` and `r meanNNDF` ± `r sdNNDF` g DM/day of CP and NDF, respectively (Figure 2).
+During the naive multi-choice feeding trial phases of the experiment, snowshoe hares ate an average of `r meanNI` ± `r sdNI` g DM/day across all diets. There was no significant effect of diet on intake rate during naive multi-choice trials (p = `r aMCpval`; Figure 2). Intake rates by diet translated to average intakes of `r meanNCP` ± `r sdNCP` and `r meanNNDF` ± `r sdNNDF` g DM/day of CP and NDF, respectively (Figure 2). The target intake of naive hares fell between the nutritional rails of Diets B and C.
 
 ![Figure 2](Output/figures/targetintake.jpeg)
 
 
+
+
 ## Feeding trial results
 
+```{r feeding trials, include = FALSE}
+
+#source the multichoice script
 
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+<!-- We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID)` individuals. All but one individual we tested on all diets. Hares ate on average `r mean(trials$Intake_bw)` g DM/kg/day of food across all diets.  -->
