--- a/results.Rmd
+++ b/results.Rmd
@@ -23,6 +23,14 @@ During the naive multi-choice feeding trial phase of the experiment, snowshoe ha
 
 ## Feeding trials
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$Intake_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure), but this varied between diets (Figure 3, panel A). The tukey test on this ANOVA shows that intake rates for diets C and D differ significantly from diet A, while all other diets did not differ significantly in intake rate (add stars to Figure 3). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the average intake rates of hares offered all diets (Figure 3, panel B).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$Intake_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure), but this varied between diets (Figure 3, panel A). The tukey test on this ANOVA shows that intake rates for diets C and D differ significantly from diet A, while all other diets did not differ significantly in intake rate (add stars to Figure 3). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the average intake rates of hares offered all diets (Figure 3, panel B). 
 
 ![Figure 3](Output/figures/intakebarandrail.jpeg)
+
+There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the highest weight loss over the three-day long trials (`r trials[Diet == "A", round(mean(Weight_change), digits = 2)]` %/day), while diets B and C allowed hares to maintain their original weight over feeding trials (Figure 4). The tukey test showed that weight change differed significantely between diet A and diets B and C (Figure 4).
+
+![Figure 4](Output/figures/weightchangebar.jpeg)
+
+
+
+digestion
