--- a/results.Rmd
+++ b/results.Rmd
@@ -17,15 +17,15 @@ source("Scripts/05-stats_treatment.R")
 
 ## Naive multi-choice trials
 
-During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(sums$DMI_bw), digits = 2)` ± `r round(sd(sums$DMI_bw), digits = 2)` g DM/day across all diets. There was no significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`; Figure 2). Intake rates by diet translated to average intakes of `r round(mean(sums$DMI_CP_bw), digits = 2)` ± `r round(sd(sums$DMI_CP_bw), digits = 2)` and `r round(mean(sums$DMI_NDF_bw), digits = 2)` ± `r round(sd(sums$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2). The target intake of naive hares fell between the nutritional rails of Diets B and C.
+During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(sums$DMI_bw), digits = 2)` ± `r round(sd(sums$DMI_bw), digits = 2)` g DM/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). Out of all diets, hares ate the most from diet B. Intake rates by diet translated to average intakes of `r round(mean(sums$DMI_CP_bw), digits = 2)` ± `r round(sd(sums$DMI_CP_bw), digits = 2)` and `r round(mean(sums$DMI_NDF_bw), digits = 2)` ± `r round(sd(sums$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2). The target intake of naive hares fell between the nutritional rails of Diets B and C.
 
 ## Single-choice feeding trials: treatment-level analysis
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure), but this varied between diets (Figure 3, panel A). The tukey test on this ANOVA shows that intake rates for diets C and D differ significantly from diet A, while all other diets did not differ significantly in intake rate (add stars to Figure 3). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the average intake rates of hares offered all diets (Figure 3, panel B).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure). According to the Tukey test, the intake rate for diet A differed significantly from all other diets while differences between diets B, C, and D were not significant (Figure 3, panel A). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 3, panel B).
 
-There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the highest weight loss over the three-day long trials (`r trials[Diet == "A", round(mean(Weight_change), digits = 2)]` %/day), while diets B and C allowed hares to maintain their original weight over feeding trials (Figure 4). The tukey test showed that weight change differed significantly between diet A and diets B and C (add stars to Figure 4).
+There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the greatest weight loss over the three-day long trials (`r trials[Diet == "A", round(median(Weight_change)*100, digits = 2)]` %/day). Diets C and D caused slight weightloss; hares could only maintain their weight on diet B (`r trials[Diet == "B", round(median(Weight_change)*100, digits = 2)]` %/day; Figure 4). The Tukey test showed that weight change differed significantly between diet A and all other diets (Figure 4).
 
-Based on fecal composition, diet treatment significantly affected daily CP (p = `r CPdigpval`), NDF (p = `r NDFdigpval`), and ADF (p = `r ADFdigpval`) digestion rates. Hares digested more CP as diet CP:NDF increased (from A to D), and CP digestion differed significantly between all combinations of diet treatment except for diets C and B (Figure 5). NDF digestibility decreased significantly between diet A and diets B and C; diets C and D produced near zero NDF digestibility with no significant difference between the two (Figure 5). ADF digestibility decreased from diet A to D, with significant differences between diet A and diets C and D, and diet B and C (Figure 5). There was an observed increase in digestibility from diet C to D, but this was not significant (Figure 5).
+Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also difference between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 5). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 5).
 
 ![Figure 2. Feeding responses (g dry matter/kg/day) by snowshoe hares during the naiive, multi-choice phase of the feeding trial experiment (n = 32) in which we offered individual hares four experimental diets simulatenously for one day. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panel A shows dry matter (DM) intake rate per kg body weight by diet treatment, with bars representing means and error bars representing standard deviations. Panel B places intake rates in Panel A in nutrient space. In Panel B, each black point represents the total CP intake plotted against total NDF intake by individual hares, summing their intake of all diets in the multi-choice feeding trial. The cross point represents the mean CP and NDF intake across all hares. Diet rails (CP:NDF) are represented by black lines.](Output/figures/targetintake.jpeg)
 
@@ -42,23 +42,18 @@ Based on fecal composition, diet treatment significantly affected daily CP (p = 
 ```{r}
 #surface map to show weight change in response to NDF and CP
 fitCP <- Tps(trials[, .(DMI_NDF_bw, DMI_CP_bw)], trials$Weight_change, scale.type = "range")
-surface(fitCP)
+surface(fitCP, x = "NDF intake (g DM/kg^0.75/day)", 
+        y = "CP intake (g DM/kg^0.75/day)")
 
 ```
 Above: Surface maps visualizing weight change performance (%/day) in relation to CP and NDF intake (g DM/kg/day).
-
-```{r}
-#surface map to show weight change in response to intake of dry matter and protein
-fitDMI <- Tps(trials[, .(DMI_bw, DMI_CP_bw)], trials$Weight_change, scale.type = "range")
-surface(fitDMI)
-```
-Above: Surface maps visualizing weight change performance (%/day) in relation to CP and total dry matter intake (g DM/kg/day).
 
 
 ```{r}
 #surface map showing weight change in response to intake of digestable protein and NDF
 fitDP <- Tps(trials[, .(DNDFI, DPI)], trials$Weight_change, scale.type = "range")
-surface(fitDP)
+surface(fitDP, x = "Digestible NDF intake (g DM/kg^0.75/day)", 
+        y = "Digestible CP intake (g DM/kg^0.75/day)")
 
 ```
 Above: Surface map visualizing weight change performance (%/day) in relation to digestible protein and digestible NDF intake (g DM/kg/day).
@@ -66,12 +61,13 @@ Above: Surface map visualizing weight change performance (%/day) in relation to 
 
 
 ```{r}
-#surface showing weight change in response to digestable dry matter and digestable protein intake
-fitDMD <- Tps(trials[, .(DMDI, DPI)], trials$Weight_change, scale.type = "range")
-surface(fitDMD)
+#surface map showing DMD in response to protein-fibre balance
 
+dmd <- Tps(trials[, .(DMI_NDF_bw, DMI_CP_bw)], trials$DMD, scale.type = "range")
+surface(dmd, x = "NDF intake (g DM/kg^0.75/day)", 
+        y = "CP intake (g DM/kg^0.75/day)")
 ```
-Above: Surface map visualizing weight change performance (%/day) in relation to digestible protein and digestible dry matter intake (g DM/kg/day).
+
 
 
 ## Additional figures
