--- a/results.Rmd
+++ b/results.Rmd
@@ -15,17 +15,22 @@ source("Scripts/05-stats_treatment.R")
 
 ```
 
-## Naive multi-choice trials
+## Multi-choice feeding trials
 
 During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(sums$DMI_bw), digits = 2)` ± `r round(sd(sums$DMI_bw), digits = 2)` g DM/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). Out of all diets, hares ate the most from diet B. Intake rates by diet translated to average intakes of `r round(mean(sums$DMI_CP_bw), digits = 2)` ± `r round(sd(sums$DMI_CP_bw), digits = 2)` and `r round(mean(sums$DMI_NDF_bw), digits = 2)` ± `r round(sd(sums$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2). The target intake of naive hares fell between the nutritional rails of Diets B and C.
 
-## Single-choice feeding trials: treatment-level analysis
+## Single-choice feeding trials: results by treatment
 
 We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure). According to the Tukey test, the intake rate for diet A differed significantly from all other diets while differences between diets B, C, and D were not significant (Figure 3, panel A). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 3, panel B).
 
 There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the greatest weight loss over the three-day long trials (`r trials[Diet == "A", round(median(Weight_change)*100, digits = 2)]` %/day). Diets C and D caused slight weightloss; hares could only maintain their weight on diet B (`r trials[Diet == "B", round(median(Weight_change)*100, digits = 2)]` %/day; Figure 4). The Tukey test showed that weight change differed significantly between diet A and all other diets (Figure 4).
 
 Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also difference between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 5). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 5).
+
+## Single-choice feeding trials: results by nutrient intake
+
+
+
 
 ![Figure 2. Feeding responses (g dry matter/kg/day) by snowshoe hares during the naiive, multi-choice phase of the feeding trial experiment (n = 32) in which we offered individual hares four experimental diets simulatenously for one day. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panel A shows dry matter (DM) intake rate per kg body weight by diet treatment, with bars representing means and error bars representing standard deviations. Panel B places intake rates in Panel A in nutrient space. In Panel B, each black point represents the total CP intake plotted against total NDF intake by individual hares, summing their intake of all diets in the multi-choice feeding trial. The cross point represents the mean CP and NDF intake across all hares. Diet rails (CP:NDF) are represented by black lines.](Output/figures/targetintake.jpeg)
 
@@ -73,7 +78,3 @@ surface(dmd, x = "NDF intake (g DM/kg^0.75/day)",
 ## Additional figures
 
 ![Excretion rates](Output/figures/excretionrates.jpg)
-
-![Weight change in response to protein intake](Output/figures/proteinintake.jpeg)
-
-![Weight change in response to fibre intake](Output/figures/NDFintake.jpeg)
