new figure caption. start results for gams

--- a/results.Rmd
+++ b/results.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 #source the multichoice script
 
 source("Scripts/05-stats_treatment.R")
-source("Scripts/07-stats_nutrients.R")
+#source("Scripts/07-stats_nutrients.R")
 
 ```
 
@@ -30,16 +30,13 @@ Based on fecal composition and quantity, diet DMD followed a similar trend to we
 
 ## Single-choice feeding trials: results by nutrient intake
 
+We used GAMs to test if response patterns in the thin-spline surface plots were significant. GAMs 
 
-
-![Figure 2. Feeding responses (g dry matter/kg^0.75/day) by snowshoe hares during both the naiive multi-choice (C and D; n = 15) and the single-choice (A and B; n = 99) feeding trial experiments. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panels A and C show mean intake rates by diet in the multi-choice and single choice scenarios, respectively (error bars = standard deviation). Panels B and D show intake rates in nutrient space where diet rails (CP:NDF) are represented by black lines. In Panel B, black points represent the total CP and NDF intake by individuals in multi-choice trials, summing their intake of all diets. The cross point represents the mean CP and NDF intake across all hares, i.e., a potential target intake. Panel D shows mean intake rates (error bars = standard deviation) along the diet rails as CP intake against NDF intake.](Output/figures/intakebarandrail.jpeg)
+![Figure 2. Feeding responses (g dry matter/kg\^0.75/day) by snowshoe hares during both the naiive multi-choice (C and D; n = 15) and the single-choice (A and B; n = 99) feeding trial experiments. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panels A and C show mean intake rates by diet in the multi-choice and single choice scenarios, respectively (error bars = standard deviation). Panels B and D show intake rates in nutrient space where diet rails (CP:NDF) are represented by black lines. In Panel B, black points represent the total CP and NDF intake by individuals in multi-choice trials, summing their intake of all diets. The cross point represents the mean CP and NDF intake across all hares, i.e., a potential target intake. Panel D shows mean intake rates (error bars = standard deviation) along the diet rails as CP intake against NDF intake.](Output/figures/intakebarandrail.jpeg)
 
 ![Figure 3. Weight change (%/day) of snowshoe hares in response to feeding on one of four experimental diets for three days during the single-choice phase of the feeding trial experiment (n = 33). Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Boxes represent median weight change bounded by lower 25th and 75th percentiles. Points represent values of individual feeding trials.](Output/figures/weightchangebar.jpeg)
 
 ![Figure 4. From top panel to bottom panel: dry matter digestibility (DMD), protein digestibility (DP), and neutral detergent fibre digestibility (DNDF), in response to feeding on one of four experimental diets fo three days during the single-choice phase of the feeding trial experiment (n = 33). Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Boxes represent median digestability bounded by lower 25th and 75th percentiles.](Output/figures/dietdigestion.jpeg)
-
-
-
 
 ```{r}
 #surface map to show weight change in response to NDF and CP
@@ -48,8 +45,8 @@ surface(fitCP, x = "NDF intake (g DM/kg^0.75/day)",
         y = "CP intake (g DM/kg^0.75/day)")
 
 ```
-Above: Surface maps visualizing weight change performance (%/day) in relation to CP and NDF intake (g DM/kg/day).
 
+Above: Surface maps visualizing weight change performance (%/day) in relation to CP and NDF intake (g DM/kg/day).
 
 ```{r}
 #surface map showing weight change in response to intake of digestable protein and NDF
@@ -58,9 +55,8 @@ surface(fitDP, x = "Digestible NDF intake (g DM/kg^0.75/day)",
         y = "Digestible CP intake (g DM/kg^0.75/day)")
 
 ```
+
 Above: Surface map visualizing weight change performance (%/day) in relation to digestible protein and digestible NDF intake (g DM/kg/day).
-
-
 
 ```{r}
 #surface map showing DMD in response to protein-fibre balance
@@ -69,8 +65,6 @@ dmd <- Tps(trials[, .(DMI_NDF_bw, DMI_CP_bw)], trials$DMD, scale.type = "range")
 surface(dmd, x = "NDF intake (g DM/kg^0.75/day)", 
         y = "CP intake (g DM/kg^0.75/day)")
 ```
-
-
 
 ## Additional figures
 
