write in results about gams, update figures

--- a/results.Rmd
+++ b/results.Rmd
@@ -19,19 +19,19 @@ source("Scripts/07-stats_nutrients.R")
 
 ## Multi-choice feeding trials
 
-During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(sums$DMI_bw), digits = 2)` ± `r round(sd(sums$DMI_bw), digits = 2)` g DM/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). Out of all diets, hares ate the most from diet B. Intake rates by diet translated to average intakes of `r round(mean(sums$DMI_CP_bw), digits = 2)` ± `r round(sd(sums$DMI_CP_bw), digits = 2)` and `r round(mean(sums$DMI_NDF_bw), digits = 2)` ± `r round(sd(sums$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2). The target intake of naive hares fell between the nutritional rails of Diets B and C.
+During the naive multi-choice feeding trial phase of the experiment, snowshoe hares ate an average of `r round(mean(sums$DMI_bw), digits = 2)` ± `r round(sd(sums$DMI_bw), digits = 2)` g DM/day across all diets. There was a significant effect of diet on intake rate during naive multi-choice trials (p = `r MCpval`). Out of all diets, hares ate the most from diet B. Intake rates by diet translated to average intakes of `r round(mean(sums$DMI_CP_bw), digits = 2)` ± `r round(sd(sums$DMI_CP_bw), digits = 2)` and `r round(mean(sums$DMI_NDF_bw), digits = 2)` ± `r round(sd(sums$DMI_NDF_bw), digits = 2)` g DM/day of CP and NDF, respectively (Figure 2, panel A). The target intake of naive hares fell between the nutritional rails of Diets B and C (Figure 2, panel B).
 
 ## Single-choice feeding trials: results by treatment
 
-We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure). According to the Tukey test, the intake rate for diet A differed significantly from all other diets while differences between diets B, C, and D were not significant (Figure 3, panel A). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 3, panel B).
+We conducted `r length(trials)` single-choice feeding trials on `r length(unique(trials$ID))` individuals. Hares ate on average `r round(mean(trials$DMI_bw), digits = 2)` g DM/kg/day of food across all diets. There was an overall significant effect of diet on intake rate (p = `r IRpval`; daily measure). According to the Tukey test, the intake rate for diet A differed significantly from all other diets while differences between diets B, C, and D were not significant (Figure 2, panel C). This pattern of intake rate resulted in hares on diets B and C to have CP and NDF intake rates closest to the target intake found in the multi-choice trials (Figure 2, panel D).
 
-There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the greatest weight loss over the three-day long trials (`r trials[Diet == "A", round(median(Weight_change)*100, digits = 2)]` %/day). Diets C and D caused slight weightloss; hares could only maintain their weight on diet B (`r trials[Diet == "B", round(median(Weight_change)*100, digits = 2)]` %/day; Figure 4). The Tukey test showed that weight change differed significantly between diet A and all other diets (Figure 4).
+There was an overall significant effect of diet on weight change during feeding trials (p = `r WCpval`; trial measures). Diet A yielded the greatest weight loss over the three-day long trials (`r trials[Diet == "A", round(median(Weight_change)*100, digits = 2)]` %/day). Diets C and D caused slight weightloss; hares could only maintain their weight on diet B (`r trials[Diet == "B", round(median(Weight_change)*100, digits = 2)]` %/day; Figure 3). The Tukey test showed that weight change differed significantly between diet A and all other diets (Figure 3).
 
-Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also difference between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 5). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 5).
+Based on fecal composition and quantity, diet DMD followed a similar trend to weight change: diet A was significantly less digestible than all other diets. Diet B was also significantly less digestible than diet D. All other diet comparisons were not significant. Daily CP (p = `r CPdigpval`) and NDF (p = `r NDFdigpval`) digestion rates also difference between diets. CP digestibility increased significantly as diet CP increased from A to B (Figure 4). Diet A and B produced similar NDF digestive rates, which were significantly higher than that of diet C. There was no significant difference in NDF digestibility of diet D and the other three diets (Figure 4).
 
 ## Single-choice feeding trials: results by nutrient intake
 
-We used GAMs and thin-spline surface plots to investigate qualitative relationships between protein and fibre intake, both as crude and digestible measures, and weight change. We also assessed how protein and fibre intake affected total DMD.  
+We used GAMs and thin-spline surface plots to investigate qualitative relationships between protein and fibre intake, both as crude and digestible measures, and weight change. We also assessed how protein and fibre intake affected total DMD. In terms of crude macronutrients, the heat map shows that hares begin to maintain weight as protein intake increases, at approximately 10 g DM/kg^0.75/day, but only at mid ranges of fibre intake. After protein intake reaches about 14 g DM/kg^0.75/day, fibre intake becomes irrelevant (Figure 5). At highest fibre intake rates relative to protein intake we see the highest weight loss. The GAM for this pattern showed that the interacting effects of protein and fibre intake were significant toward weight change and that this relationship was non-linear (edf > 10); together this interaction explained `r round(sum$dev.expl, 2)*100`% of the deviation (Table 2). The effect of digestible macronutrient intake on weight change shows a similar response to that of crude macronutrient, but with highest performance occurring from a more balanced intake of digestible protein and digestible fibre (Figure 5). This is further expressed with a higher edf in the GAM output, which means the effect is more non-linear. Yogether this interaction explained `r round(sum2$dev.expl, 2)*100`% of the deviation (Table 2). Lastly, the relationship between DMD and protein-fibre intake is the most non-linear of the three models, with the highest edf and the highest deviation explained (`r round(sum3$dev.expl, 2)*100`%; Table 2). Figure 5 displays this, with higher digestibility occurring as the ratio of protein to fibre intake increases.
 
 ![Figure 2. Feeding responses (g dry matter/kg\^0.75/day) by snowshoe hares during both the naiive multi-choice (C and D; n = 15) and the single-choice (A and B; n = 99) feeding trial experiments. Diets A, B, C, and D had crude protein (CP) to neutral detergent fibre (NDF) ratios of 0.083, 0.22, 0.36, and 0.5 respectively. Panels A and C show mean intake rates by diet in the multi-choice and single choice scenarios, respectively (error bars = standard deviation). Panels B and D show intake rates in nutrient space where diet rails (CP:NDF) are represented by black lines. In Panel B, black points represent the total CP and NDF intake by individuals in multi-choice trials, summing their intake of all diets. The cross point represents the mean CP and NDF intake across all hares, i.e., a potential target intake. Panel D shows mean intake rates (error bars = standard deviation) along the diet rails as CP intake against NDF intake.](Output/figures/intakebarandrail.jpeg)
 
